prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/syntax_errors/delete_op_forbidden.nut
// EXPECT_ERROR: "Usage of 'delete' operator is forbidden"
#forbid-delete-operator
let t = {a = 1}
delete t.a
